--- a/demo/W05-modal-starter/index.html
+++ b/demo/W05-modal-starter/index.html
@@ -8,13 +8,13 @@
     <title>Modal window</title>
   </head>
   <body>
-    <button class="show-modal">Show modal 1</button>
-    <button class="show-modal">Show modal 2</button>
-    <button class="show-modal">Show modal 3</button>
+    <button class="show-modal" data-modal-id="modal1">Show modal 1</button>
+    <button class="show-modal" data-modal-id="modal2">Show modal 2</button>
+    <button class="show-modal" data-modal-id="modal3">Show modal 3</button>
 
-    <div class="modal hidden">
+    <div class="modal hidden" id="modal1">
       <button class="close-modal">&times;</button>
-      <h1>I'm a modal window 😍</h1>
+      <h1>I'm a modal window 1 😍</h1>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
@@ -25,6 +25,35 @@
         mollit anim id est laborum.
       </p>
     </div>
+
+    <div class="modal hidden" id="modal2">
+      <button class="close-modal">&times;</button>
+      <h1>I'm a modal window 2 😍</h1>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+        mollit anim id est laborum.
+      </p>
+    </div>
+
+    <div class="modal hidden" id="modal3">
+      <button class="close-modal">&times;</button>
+      <h1>I'm a modal window 3 😍</h1>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+        mollit anim id est laborum.
+      </p>
+    </div>
+
     <div class="overlay hidden"></div>
 
     <script src="script_64.js"></script>
