W06-P1: Run w3school scores.find();

--- a/demo/w06-array/p1_64/p1_64.html
+++ b/demo/w06-array/p1_64/p1_64.html
@@ -7,7 +7,6 @@
     <title>P1_64</title>
 </head>
 <body>
-    
+    <script type="module" src="./p1_64.js"></script>
 </body>
-<script src="./p1_64.js"></script>
 </html>
