--- a/demo/w06-array/p2_64/p2_64.html
+++ b/demo/w06-array/p2_64/p2_64.html
@@ -7,6 +7,6 @@
     <title>P2_64</title>
 </head>
 <body>
-    <script src="./p2_64.js"></script>
+    <script type="module" src="./p2_64.js"></script>
 </body>
 </html>
