--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
  		<div class="row v-center">
  			<div class="header-item item-left">
  				<div class="logo">
- 					<a href="#">208410364</a>
+ 					<a href="#">TKU demo</a>
  				</div>
  			</div>
  			<!-- menu start here -->
@@ -64,15 +64,16 @@
  							<a href="#">Class Demo <i class="fa fa-angle-down"></i></a>
  							<div class="sub-menu mega-menu mega-menu-column-4">
                                <div class="list-item">
-                               	  <h4 class="title">Men's Fashion</h4>
+                               	  <h4 class="title">Week 1~6</h4>
                                	  <ul>
-                               	  	 <li><a href="#">Product List</a></li>
-                               	  	 <li><a href="#">Product List</a></li>
-                               	  	 <li><a href="#">Product List</a></li>
-                               	  	 <li><a href="#">Product List</a></li>
-                               	  	 <li><a href="#">Product List</a></li>
+                               	  	 <li><a href="#" onclick="showClassDemo('1')">Unconv. Calculator (w1)</a></li>
+                               	  	 <li><a href="#" onclick="showClassDemo('2')">TicTacToe (w2)</a></li>
+                               	  	 <li><a href="#">Review (w3)</a></li>
+                               	  	 <li><a href="#">Menu-1 (w4)</a></li>
+                               	  	 <li><a href="#">Menu-2 (w5)</a></li>
+									 <li><a href="#">Menu-2 (w5)</a></li>
                                	  </ul>
-                               	  <h4 class="title">Beauty</h4>
+                               	  <h4 class="title">Midprep Exam (w7)</h4>
                                	  <ul>
                                	  	 <li><a href="#">Product List</a></li>
                                	  	 <li><a href="#">Product List</a></li>
@@ -157,12 +158,13 @@
  <!-- header end -->
 
  <!-- banner start -->
- <section class="banner-section">
+ <section class="demo-section">
  	
  </section>
  <!-- banner end -->
 
 <script src="js/script_64.js"></script>
+<script src="js/classdemo_64.js"></script>
 </body>
 </html>
 
