--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
  <!-- header end -->
 
  <!-- banner start -->
- <section class="demo-section">
+ <section class="banner-section">
  	
  </section>
  <!-- banner end -->
