--- a/index.html
+++ b/index.html
@@ -1,172 +1,166 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<title>Mega Menu</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="css/style_64.css">
 </head>
+
 <body>
- 
- <!-- header start -->
- <header class="header">
- 	<div class="container">
- 		<div class="row v-center">
- 			<div class="header-item item-left">
- 				<div class="logo">
- 					<a href="#">TKU demo</a>
- 				</div>
- 			</div>
- 			<!-- menu start here -->
- 			<div class="header-item item-center">
- 				<div class="menu-overlay">
- 				</div>
- 				<nav class="menu">
- 					<div class="mobile-menu-head">
- 						<div class="go-back"><i class="fa fa-angle-left"></i></div>
- 						<div class="current-menu-title"></div>
- 						<div class="mobile-menu-close">&times;</div>
- 					</div>
- 					<ul class="menu-main">
- 						<li>
- 							<a href="#">Home</a>
- 						</li>
- 						<li class="menu-item-has-children">
- 							<a href="#">New <i class="fa fa-angle-down"></i></a>
- 							<div class="sub-menu mega-menu mega-menu-column-4">
- 								<div class="list-item text-center">
- 									<a href="#">
- 									<img src="img/p1.jpg" alt="new Product">
- 									<h4 class="title">Product 1</h4>
- 									</a>
- 								</div>
- 								<div class="list-item text-center">
- 									<a href="#">
- 									<img src="img/p2.jpg" alt="new Product">
- 									<h4 class="title">Product 2</h4>
- 									</a>
- 								</div>
- 								<div class="list-item text-center">
- 									<a href="#">
- 									<img src="img/p3.jpg" alt="new Product">
- 									<h4 class="title">Product 3</h4>
- 									</a>
- 								</div>
- 								<div class="list-item text-center">
- 									<a href="#">
- 									<img src="img/p4.jpg" alt="new Product">
- 									<h4 class="title">Product 4</h4>
- 								   </a>
- 								</div>
- 							</div>
- 						</li>
- 						<li class="menu-item-has-children">
- 							<a href="#">Class Demo <i class="fa fa-angle-down"></i></a>
- 							<div class="sub-menu mega-menu mega-menu-column-4">
-                               <div class="list-item">
-                               	  <h4 class="title">Week 1~6</h4>
-                               	  <ul>
-                               	  	 <li><a href="#" onclick="showClassDemo('1')">Unconv. Calculator (w1)</a></li>
-                               	  	 <li><a href="#" onclick="showClassDemo('2')">TicTacToe (w2)</a></li>
-                               	  	 <li><a href="#">Review (w3)</a></li>
-                               	  	 <li><a href="#">Menu-1 (w4)</a></li>
-                               	  	 <li><a href="#">Menu-2 (w5)</a></li>
-									 <li><a href="#">Menu-2 (w5)</a></li>
-                               	  </ul>
-                               	  <h4 class="title">Midprep Exam (w7)</h4>
-                               	  <ul>
-                               	  	 <li><a href="#">Product List</a></li>
-                               	  	 <li><a href="#">Product List</a></li>
-                               	  	 <li><a href="#">Product List</a></li>
-                               	  </ul>
-                               </div>
-                               <div class="list-item">
-                               	<h4 class="title">Women's Fashion</h4>
-                               	<ul>
-                               	  	 <li><a href="#">Product List</a></li>
-                               	  	 <li><a href="#">Product List</a></li>
-                               	  	 <li><a href="#">Product List</a></li>
-                               	  	 <li><a href="#">Product List</a></li>
-                               	  </ul>
-                               	  <h4 class="title">Furniture</h4>
-                               	<ul>
-                               	  	 <li><a href="#">Product List</a></li>
-                               	  	 <li><a href="#">Product List</a></li>
-                               	  	 <li><a href="#">Product List</a></li>
-                               	  	 <li><a href="#">Product List</a></li>
-                               	  </ul>
-                               </div>
-                               <div class="list-item">
-                               	<h4 class="title">Home, Kitchen</h4>
-                               	<ul>
-                               	  	 <li><a href="#">Product List</a></li>
-                               	  	 <li><a href="#">Product List</a></li>
-                               	  	 <li><a href="#">Product List</a></li>
-                               	  	 <li><a href="#">Product List</a></li>
-                               	  	 <li><a href="#">Product List</a></li>
-                               	  	 <li><a href="#">Product List</a></li>
-                               	  	 <li><a href="#">Product List</a></li>
-                               	  	 <li><a href="#">Product List</a></li>
-                               	  	 <li><a href="#">Product List</a></li>
-                               	  </ul>
-                               </div>
-                               <div class="list-item">
-                               	 <img src="img/shop1.jpg" alt="shop">
-                               </div>
- 							</div>
- 						</li>
- 						<li class="menu-item-has-children">
- 							<a href="#">Blog <i class="fas fa-angle-down"></i></a>
- 							<div class="sub-menu single-column-menu">
- 								<ul>
- 									<li><a href="#">Standard Layout</a></li>
- 									<li><a href="#">Grid Layout</a></li>
- 									<li><a href="#">single Post Layout</a></li>
- 								</ul>
- 							</div>
- 						</li>
- 						<li class="menu-item-has-children">
- 							<a href="#">Pages <i class="fas fa-angle-down"></i></a>
- 							<div class="sub-menu single-column-menu">
- 								<ul>
- 									<li><a href="#">Login</a></li>
- 									<li><a href="#">Register</a></li>
- 									<li><a href="#">Faq</a></li>
- 									<li><a href="#">404 Page</a></li>
- 								</ul>
- 							</div>
- 						</li>
- 						<li>
- 							<a href="#">Contact</a>
- 						</li>
- 					</ul>
- 				</nav>
- 			</div>
- 			<!-- menu end here -->
- 			<div class="header-item item-right">
- 				<a href="#"><i class="fas fa-search"></i></a>
- 				<a href="#"><i class="far fa-heart"></i></a>
- 				<a href="#"><i class="fas fa-shopping-cart"></i></a>
- 				<!-- mobile menu trigger -->
- 				<div class="mobile-menu-trigger">
- 					<span></span>
- 				</div>
- 			</div>
- 		</div>
- 	</div>
- </header>
- <!-- header end -->
 
- <!-- banner start -->
- <section class="banner-section">
- 	
- </section>
- <!-- banner end -->
+	<!-- header start -->
+	<header class="header">
+		<div class="container">
+			<div class="row v-center">
+				<div class="header-item item-left">
+					<div class="logo">
+						<a href="#">TKU demo</a>
+					</div>
+				</div>
+				<!-- menu start here -->
+				<div class="header-item item-center">
+					<div class="menu-overlay">
+					</div>
+					<nav class="menu">
+						<div class="mobile-menu-head">
+							<div class="go-back"><i class="fa fa-angle-left"></i></div>
+							<div class="current-menu-title"></div>
+							<div class="mobile-menu-close">&times;</div>
+						</div>
+						<ul class="menu-main">
+							<li>
+								<a href="#">Home</a>
+							</li>
+							<li class="menu-item-has-children">
+								<a href="#">New <i class="fa fa-angle-down"></i></a>
+								<div class="sub-menu mega-menu mega-menu-column-4">
+									<div class="list-item text-center">
+										<a href="#">
+											<img src="img/p1.jpg" alt="new Product">
+											<h4 class="title">Product 1</h4>
+										</a>
+									</div>
+									<div class="list-item text-center">
+										<a href="#">
+											<img src="img/p2.jpg" alt="new Product">
+											<h4 class="title">Product 2</h4>
+										</a>
+									</div>
+									<div class="list-item text-center">
+										<a href="#">
+											<img src="img/p3.jpg" alt="new Product">
+											<h4 class="title">Product 3</h4>
+										</a>
+									</div>
+									<div class="list-item text-center">
+										<a href="#">
+											<img src="img/p4.jpg" alt="new Product">
+											<h4 class="title">Product 4</h4>
+										</a>
+									</div>
+								</div>
+							</li>
+							<li class="menu-item-has-children">
+								<a href="#">Class Demo <i class="fa fa-angle-down"></i></a>
+								<div class="sub-menu mega-menu mega-menu-column-4">
+									<div class="list-item">
+										<h4 class="title">Week 1~6</h4>
+										<ul>
+											<li><a href="#" onclick="showClassDemo('w1')">Unconv. Calculator (w1)</a>
+											</li>
+											<li><a href="#" onclick="showClassDemo('w2')">TicTacToe (w2)</a></li>
+											<li><a href="#">Review (w3)</a></li>
+											<li><a href="#">Menu-1 (w4)</a></li>
+											<li><a href="#">Menu-2 (w5)</a></li>
+											<li><a href="#">Modal (w5)</a></li>
+											<li><a href="#">Array (console) (w6)</a></li>
+										</ul>
+									</div>
+									<div class="list-item">
+										<h4 class="title">Midprep Exam (w7)</h4>
+										<ul>
+											<li><a href="#">P1 - BMI (console)</a></li>
+											<li><a href="#">P2 - Counter</a></li>
+											<li><a href="#">P3 -Tour</a></li>
+										</ul>
+										<h4 class="title">Midterm Exam</h4>
+										<ul>
+											<li><a href="#">P1</a></li>
+											<li><a href="#">P2</a></li>
+											<li><a href="#">P3</a></li>
+											<li><a href="#">P4</a></li>
+										</ul>
+									</div>
+									<div class="list-item">
+										<h4 class="title">Week 11~17</h4>
+										<ul>
+											<li><a href="#">W11</a></li>
+											<li><a href="#">W12</a></li>
+											<li><a href="#">W13</a></li>
+											<li><a href="#">W14</a></li>
+											<li><a href="#">W15</a></li>
+											<li><a href="#">W16</a></li>
+											<li><a href="#">W17</a></li>
+											<li><a href="#">W18</a></li>
+										</ul>
+									</div>
+									<div class="list-item">
+										<img src="img/shop1.jpg" alt="shop">
+									</div>
+								</div>
+							</li>
+							<li class="menu-item-has-children">
+								<a href="#">Blog <i class="fas fa-angle-down"></i></a>
+								<div class="sub-menu single-column-menu">
+									<ul>
+										<li><a href="#">Standard Layout</a></li>
+										<li><a href="#">Grid Layout</a></li>
+										<li><a href="#">single Post Layout</a></li>
+									</ul>
+								</div>
+							</li>
+							<li class="menu-item-has-children">
+								<a href="#">Pages <i class="fas fa-angle-down"></i></a>
+								<div class="sub-menu single-column-menu">
+									<ul>
+										<li><a href="#">Login</a></li>
+										<li><a href="#">Register</a></li>
+										<li><a href="#">Faq</a></li>
+										<li><a href="#">404 Page</a></li>
+									</ul>
+								</div>
+							</li>
+							<li>
+								<a href="#">Contact</a>
+							</li>
+						</ul>
+					</nav>
+				</div>
+				<!-- menu end here -->
+				<div class="header-item item-right">
+					<a href="https://github.com/lan1018/1112-1N-js-demo-208410364"><i class="fas fa-search"></i></a>
+					<a href="https://github.com/lan1018/1112-1N-js-demo-208410364/tree/main/demo/md"><i class="far fa-heart"></i></a>
+					<a href="#"><i class="fas fa-shopping-cart"></i></a>
+					<!-- mobile menu trigger -->
+					<div class="mobile-menu-trigger">
+						<span></span>
+					</div>
+				</div>
+			</div>
+		</div>
+	</header>
+	<!-- header end -->
 
-<script src="js/script_64.js"></script>
-<script src="js/classdemo_64.js"></script>
+	<!-- banner start -->
+	<section class="banner-section">
+
+	</section>
+	<!-- banner end -->
+
+	<script src="js/script_64.js"></script>
+	<script src="./js/classdemo_64.js"></script>
 </body>
+
 </html>
-
-
-
