--- a/index.html
+++ b/index.html
@@ -68,24 +68,53 @@
 									<div class="list-item">
 										<h4 class="title">Week 1~6</h4>
 										<ul>
-											<li><a href="#" onclick="showClassDemo('w1')">Unconv. Calculator (w1)</a>
+											<li>
+												<a href="#" onclick="showClassDemo('w1')">Calculator (w1)</a>
+												<a href="#" onclick="showClassDemo('w1-md')">(w1-md)</a>
 											</li>
-											<li><a href="#" onclick="showClassDemo('w2')">TicTacToe (w2)</a></li>
-											<li><a href="#">Review (w3)</a></li>
-											<li><a href="#">Menu-1 (w4)</a></li>
-											<li><a href="#">Menu-2 (w5)</a></li>
-											<li><a href="#">Modal (w5)</a></li>
-											<li><a href="#">Array (console) (w6)</a></li>
+											<li>
+												<a href="#" onclick="showClassDemo('w2')">TicTacToe (w2)</a>
+												<a href="#" onclick="showClassDemo('w2-md')">(w2-md)</a>
+											</li>
+											<li>
+												<a href="#" onclick="showClassDemo('w3')">Review (w3)</a>
+												<a href="#" onclick="showClassDemo('w3-md')">(w3-md)</a>
+											</li>
+											<li>
+												<a href="#" onclick="showClassDemo('w4')">Menu-1 (w4)</a>
+												<a href="#" onclick="showClassDemo('w4-md')">(w4-md)</a>
+											</li>
+											<li>
+												<a href="#" onclick="showClassDemo('w5_1')">Menu-2 (w5)</a>
+												<a href="#" onclick="showClassDemo('w5-md')">(w5-md)</a>
+											</li>
+											<li>
+												<a href="#" onclick="showClassDemo('w5_2')">Modal (w5)</a>
+												<a href="#" onclick="showClassDemo('w5-md')">(w5-md)</a>
+											</li>
+											<li>
+												<a href="#" onclick="showClassDemo('w6')">Temp. Convert (w6)</a>
+												<a href="#" onclick="showClassDemo('w6-md')">(w6-md)</a>
+											</li>
 										</ul>
 									</div>
 									<div class="list-item">
-										<h4 class="title">Midprep Exam (w7)</h4>
+										<h4 class="title">Midprep Exam (w9)</h4>
 										<ul>
-											<li><a href="#">P1 - BMI (console)</a></li>
-											<li><a href="#">P2 - Counter</a></li>
-											<li><a href="#">P3 -Tour</a></li>
+											<li>
+												<a href="#" onclick="showClassDemo('w9_P1')">P1 - BMI (console)</a>
+												<a href="#" onclick="showClassDemo('w9-md')">(w9-md)</a>
+											</li>
+											<li>
+												<a href="#" onclick="showClassDemo('w9_P2')">P2 - Counter</a>
+												<a href="#" onclick="showClassDemo('w9-md')">(w9-md)</a>
+											</li>
+											<li>
+												<a href="#" onclick="showClassDemo('w9_P3')">P3 -Tours</a>
+												<a href="#" onclick="showClassDemo('w9-md')">(w9-md)</a>
+											</li>
 										</ul>
-										<h4 class="title">Midterm Exam</h4>
+										<h4 class="title">Midterm Exam (10)</h4>
 										<ul>
 											<li><a href="#">P1</a></li>
 											<li><a href="#">P2</a></li>
@@ -140,9 +169,10 @@
 				</div>
 				<!-- menu end here -->
 				<div class="header-item item-right">
-					<a href="https://github.com/lan1018/1112-1N-js-demo-208410364"><i class="fas fa-search"></i></a>
-					<a href="https://github.com/lan1018/1112-1N-js-demo-208410364/tree/main/demo/md"><i class="far fa-heart"></i></a>
-					<a href="#"><i class="fas fa-shopping-cart"></i></a>
+					<a href="https://github.com/lan1018/1112-1N-js-demo-208410364"><i class="fab fa-github"></i></a>
+					<a href="https://github.com/lan1018/1112-1N-js-demo-208410364/tree/main/demo/md"><i
+							class="fab fa-git-alt"></i></a>
+					<a href="#"><i class="fas fa-cog"></i></a>
 					<!-- mobile menu trigger -->
 					<div class="mobile-menu-trigger">
 						<span></span>
