--- a/index.html
+++ b/index.html
@@ -96,6 +96,9 @@
 												<a href="#" onclick="showClassDemo('w6')">Temp. Convert (w6)</a>
 												<a href="#" onclick="showClassDemo('w6-md')">(w6-md)</a>
 											</li>
+											<li>
+												<a href="#" onclick="showClassDemo('md')">繳交作業以及說明內容--md檔</a>
+											</li>
 										</ul>
 									</div>
 									<div class="list-item">
