--- a/demo/W13-menu-api/index.html
+++ b/demo/W13-menu-api/index.html
@@ -48,7 +48,7 @@
     </div>
   </section>
   <!-- javascript -->
-  <script type="module" src="app_64.js"></script>
+  <script type="module" src="./app_64.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </body>
-
 </html>
