--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
 								<a href="#">API project <i class="fas fa-angle-down"></i></a>
 								<div class="sub-menu single-column-menu">
 									<ul>
-										<li><a href="#">api_64.md</a></li>
-										<li><a href="#">P1</a></li>
+										<li><a href="#" onclick="showClassDemo('api-md')">api_64.md</a></li>
+										<li><a href="#" onclick="showClassDemo('api')">P1(API)</a></li>
 										<li><a href="#">P2</a></li>
 										<li><a href="#">P3</a></li>
 										<li><a href="#">心得甘苦談</a></li>
