--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 										<li><a href="#" onclick="showClassDemo('api')">P1(API)</a></li>
 										<li><a href="#">P2</a></li>
 										<li><a href="#">P3</a></li>
-										<li><a href="#">心得甘苦談</a></li>
+										<li><a href="#" onclick="showClassDemo('exp')">心得甘苦談</a></li>
 									</ul>
 								</div>
 							</li>
